Repaint screen after config update in diminactive effect

BUG: 308283
FIXED-IN: 4.9.3
REVIEW: 106814